   - ofaIPrefsPage: have an error message on init() and apply() methods.
   - ofaPage: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPlugin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPReferences: move user interface to GResource (todo #826).
   - ofaPreferences: migrate to G_ADD_PRIVATE (todo #994).
   - ofoAccount: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBat: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBat: rename ofo_bat_get|set_begin|end methods (todo #996).
   - ofoBase: migrate to G_ADD_PRIVATE (todo #994).

-----------------------------------------------------------------------
 Version 0.48
 ============

 Released on 2016-02-14

 New features and improvements:

   - ofaAccountFrameBin: scroll the treeview up to the preselected account (todo #988).
   - ofaAccountProperties: display an error message + run non modal (todo #984).
   - ofaBatPage: now dynamically auto-updates on conciliations (todo #979).
   - ofaBatPage: select newly imported BAT file (todo #993).
   - ofaBatSelect: display unused count (todo #990) .
   - ofaITreeviewColumn: add ofaIConcil 'Type' column for display selection.
   - ofaRenderPage: no more disabled 'Render' button after rendering (todo #980).

 Bug fixes:

   - import-bourso-pdf/ofaImporter: accept empty lines on bottom page.
   - ofaExportAssistant: fix type selection (todo #982).
   - ofaGuidedInput: fix fields reset after validation (todo #973).
   - ofaLedgerClose: remove unused (and badly cast) box. 
   - ofaReconciliationPage: does not try to associate a batline to a deleted entry.
   - ofaReconciliationPage: improve concililation groups management (todo #976).
   - ofaReconciliationPage: fix concililation/unconciliation operations (todo #977).
   - ofaReconciliationPage: fix display of new entry conciliation date (todo #991).
   - ofoAccount: fix ofo_account_get_by_number() assertion (todo #972).
   - ofoBat: fix setting imported identifier on import (todo #989).