@@ -48,9 +48,10 @@
    - ofaPReferences: move user interface to GResource (todo #826).
    - ofaPreferences: migrate to G_ADD_PRIVATE (todo #994).
    - ofoAccount: migrate to G_ADD_PRIVATE (todo #994).
+   - ofoBase: migrate to G_ADD_PRIVATE (todo #994).
    - ofoBat: migrate to G_ADD_PRIVATE (todo #994).
    - ofoBat: rename ofo_bat_get|set_begin|end methods (todo #996).
-   - ofoBase: migrate to G_ADD_PRIVATE (todo #994).
+   - ofoBatLine: migrate to G_ADD_PRIVATE (todo #994).
 
 -----------------------------------------------------------------------
  Version 0.48
